Use the file descriptor based method to download a file with gphoto2. This should solve problems with very large files because they can directly be written to disk.

BUG: 174586

svn path=/trunk/extragear/graphics/digikam/; revision=995957